src/test/deca/test_compilateur/syntax/valid/created/instanceof.deca
// Description :
//    instance of
//
// Resultats :
//		Ok

class a {
}

{
 a instanceof b;
}