src/test/deca/test_compilateur/syntax/invalid/created/miscellaneous/bad_op3.deca
// Description :
//    manque une operande
//
// Resultats :
//		Syntaxe error

{
a = a + ;
}